# smartcar2026-simulation

./: .gitignore  AGENTS.md  DEPLOYMENT.md  README.md  TASK3_RUNBOOK.md  requirements-vision.txt  start_sim_clean.sh  start_v3_clean.sh
src/car3/: CMakeLists.txt  package.xml
src/car3/config/: arm_init_pose.yaml  car3_control.yaml  left_cube_grasp_calibration.yaml  task3_vision.yaml
src/car3/launch/: capture_cube_dataset.launch  gazebo.launch  task3_execute.launch  task3_pick_deliver.launch  task3_prepare.launch  v3_cym_gazebo.launch  yolo_detector.launch
src/car3/meshes/: arm_base_link.STL  arm_link1.STL  arm_link2.STL  arm_link3.STL  arm_link4.STL  arm_link5.STL  arm_link6.STL  camera_mount_link.STL  imu_link.STL  l_in_link.STL  l_link.STL  l_out_link.STL  laser_link.STL  r_in_link.STL  r_link.STL  r_out_link.STL  wheel_lb_link.STL  wheel_lf_link.STL  wheel_rb_link.STL  wheel_rf_link.STL
src/car3/models/cube/: model.config  model_0.sdf  model_1.sdf  model_2.sdf
src/car3/models/cube/meshes/: cube_0.mtl  cube_1.mtl  cube_2.mtl
src/car3/models/sign/: model.config  model.sdf
src/car3/models/sign/meshes/: wall_Daily.mtl  (+2 more)
src/car3/models/vision/: cube_label_hog_svm.xml  cube_yolov5_best.json
src/car3/rviz/: navigation.rviz  v3_cym_nav.rviz
src/car3/scripts/: arm_pose_tuner.py  build_label_guard.py  capture_cube_dataset.py  goal_coordinate_logger.py  grasp_attach.py  gripper_mimic.py  keyboard_drive.py  odom_tf_broadcaster.py  projected_cube_grasp_test.py  reset_car_start.py  set_arm_initial_pose.py  spawn_cubes.py  task3_pick_deliver.py  yolo_detector.py
src/car3/test/: test_cube_mesh_uri.py  test_sign_mesh_uri.py  test_task3_realtime_budget.py  test_task3_visual_pipeline.py
src/car3/urdf/: car3.urdf
src/car3/world/: math.world
(+85 files in other folders)
